--- a/Ejemplos-Practicos/CalculadoraFiguras/Figura.css
+++ b/Ejemplos-Practicos/CalculadoraFiguras/Figura.css
@@ -25,7 +25,7 @@ section {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 90%;
+  height: fit-content;
   margin: 0% 1% 10% 1%;
 }
 .container {
@@ -43,6 +43,7 @@ section {
   justify-content: center;
   border: 1px solid black;
   margin: 1%;
+  height: fit-content;
 }
 .container .figura:nth-child(1) {
   grid-column: 1/2;
@@ -58,8 +59,32 @@ section {
   display: flex;
   align-items: center;
   border-radius: 20px;
-  height: 100%;
+  height: fit-content;
   width: 100%;
   background: cyan;
   flex-direction: column;
+}
+
+form {
+  margin: 1% 5% 0% 5%;
+}
+.orden {
+  display: grid;
+  width: 100%;
+  margin: 2% 0% 0% 0%;
+  /* border: 1px solid black;
+   */
+  grid-template-columns: 65% 35%;
+}
+
+.botones {
+  /*  border: 1px solid black;
+  */
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 5% 5% 5% 5%;
+  padding: 2% 1% 2% 1%;
+}
+button {
+  margin: 0% 5% 0% 5%;
 }
