--- a/Ejemplos-Practicos/SorpresaAleja/index.css
+++ b/Ejemplos-Practicos/SorpresaAleja/index.css
@@ -4,7 +4,8 @@ body {
   background-repeat: no-repeat, repeat;
   background-position: inherit;
   background-size: repeat;
-
+  width: 100%;
+  height: 100%;
 }
 nav {
   padding-top: 20pt;
@@ -50,4 +51,10 @@ p {
 }
 h2{
     color: rgb(255, 0, 60);
+}
+
+img{
+  width: 100%;
+  height: 100%;
+  
 }
